--- a/app/src/main/res/layout/include_general_expense_expanded_state.xml
+++ b/app/src/main/res/layout/include_general_expense_expanded_state.xml
@@ -99,7 +99,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="0"
-            android:inputType="number"
+            android:inputType="numberDecimal"
             android:textColor="@color/inputTextColor"
             android:textColorHint="@color/hintTextColor" />
     </com.google.android.material.textfield.TextInputLayout>
