--- a/app/src/main/res/layout/include_invoice_details.xml
+++ b/app/src/main/res/layout/include_invoice_details.xml
@@ -269,25 +269,16 @@
         android:id="@+id/tv_goldQ"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="4dp"
-        tools:text="22"
+        android:layout_marginEnd="16dp"
         android:textAlignment="textEnd"
         android:textColor="@color/secondaryTextColor"
         android:textSize="14sp"
         app:layout_constraintBottom_toBottomOf="@+id/tv_lbl_goldQ"
-        app:layout_constraintEnd_toStartOf="@+id/tv_lbl_mm" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/tv_lbl_goldQ"
+        app:layout_constraintTop_toTopOf="@+id/tv_lbl_goldQ"
+        tools:text="22" />
 
-    <TextView
-        android:id="@+id/tv_lbl_mm"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="16dp"
-        android:text="mm"
-        android:textAlignment="textEnd"
-        android:textColor="#7B8794"
-        android:textSize="14sp"
-        app:layout_constraintBottom_toBottomOf="@+id/tv_goldQ"
-        app:layout_constraintEnd_toEndOf="parent" />
 
     <TextView
         android:id="@+id/tv_lbl_gold_weight_KPY"
