--- a/app/src/main/res/layout/item_view_gem_weight.xml
+++ b/app/src/main/res/layout/item_view_gem_weight.xml
@@ -96,7 +96,7 @@
                 android:textSize="14sp"
                 android:textStyle="normal" />
         </com.google.android.material.textfield.TextInputLayout>
-        <com.google.android.material.button.MaterialButton
+        <TextView
             android:id="@+id/btn_calculate_total_gem_weight"
             android:layout_width="0dp"
             app:elevation="0dp"
@@ -125,7 +125,7 @@
             android:textStyle="normal" />
 
         <ImageView
-            android:id="@+id/tv_lbl_action"
+            android:id="@+id/ic_delete"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
