--- a/app/src/main/res/layout/include_f_gold_weight.xml
+++ b/app/src/main/res/layout/include_f_gold_weight.xml
@@ -167,7 +167,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="0"
-            android:inputType="number"
+            android:inputType="numberDecimal"
             android:textColor="@color/inputTextColor"
             android:textColorHint="@color/hintTextColor" />
 
