--- a/app/src/main/res/layout/include_invoice_details.xml
+++ b/app/src/main/res/layout/include_invoice_details.xml
@@ -316,34 +316,34 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv_lbl_gold_weight_KPY" />
 
-    <TextView
-        android:id="@+id/tv_lbl_pay_form_shop"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="8dp"
-        android:text="ဆိုင်မှဝယ်ပေးငွေ"
-        android:textColor="@color/inputTextColor"
-        android:textSize="13sp"
-        app:layout_constraintEnd_toStartOf="@+id/tv_rebuy_price_from_shop"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/view2" />
+<!--    <TextView-->
+<!--        android:id="@+id/tv_lbl_pay_form_shop"-->
+<!--        android:layout_width="0dp"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_marginStart="16dp"-->
+<!--        android:layout_marginTop="8dp"-->
+<!--        android:text="ဆိုင်မှဝယ်ပေးငွေ"-->
+<!--        android:textColor="@color/inputTextColor"-->
+<!--        android:textSize="13sp"-->
+<!--        app:layout_constraintEnd_toStartOf="@+id/tv_rebuy_price_from_shop"-->
+<!--        app:layout_constraintHorizontal_bias="0.5"-->
+<!--        app:layout_constraintStart_toStartOf="parent"-->
+<!--        app:layout_constraintTop_toBottomOf="@+id/view2" />-->
 
-    <TextView
-        android:id="@+id/tv_rebuy_price_from_shop"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="16dp"
-        android:text="0"
-        android:textAlignment="textEnd"
-        android:textColor="@color/secondaryTextColor"
-        android:textSize="14sp"
-        app:layout_constraintBottom_toBottomOf="@+id/tv_lbl_pay_form_shop"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/tv_lbl_pay_form_shop"
-        app:layout_constraintTop_toTopOf="@+id/tv_lbl_pay_form_shop" />
+<!--    <TextView-->
+<!--        android:id="@+id/tv_rebuy_price_from_shop"-->
+<!--        android:layout_width="0dp"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_marginEnd="16dp"-->
+<!--        android:text="0"-->
+<!--        android:textAlignment="textEnd"-->
+<!--        android:textColor="@color/secondaryTextColor"-->
+<!--        android:textSize="14sp"-->
+<!--        app:layout_constraintBottom_toBottomOf="@+id/tv_lbl_pay_form_shop"-->
+<!--        app:layout_constraintEnd_toEndOf="parent"-->
+<!--        app:layout_constraintHorizontal_bias="0.5"-->
+<!--        app:layout_constraintStart_toEndOf="@+id/tv_lbl_pay_form_shop"-->
+<!--        app:layout_constraintTop_toTopOf="@+id/tv_lbl_pay_form_shop" />-->
 
 
     <TextView
@@ -358,7 +358,7 @@
         app:layout_constraintEnd_toStartOf="@+id/tv_price_a"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_lbl_pay_form_shop" />
+        app:layout_constraintTop_toBottomOf="@+id/view2" />
 
     <TextView
         android:id="@+id/tv_price_a"
