--- a/app/src/main/res/layout/include_voucher_details.xml
+++ b/app/src/main/res/layout/include_voucher_details.xml
@@ -28,17 +28,17 @@
         android:text="ဘောင်ချာဖွင့်ဝယ်စျေး"
         android:textColor="@color/inputTextColor"
         android:textSize="13sp"
-        app:layout_constraintEnd_toStartOf="@+id/tv_price_b"
+        app:layout_constraintEnd_toStartOf="@+id/tv_price_c"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv_lbl_invoice_details" />
 
     <TextView
-        android:id="@+id/tv_price_b"
+        android:id="@+id/tv_price_c"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
-        android:text="45,000"
+        tools:text="45,000"
         android:textAlignment="textEnd"
         android:textColor="@color/secondaryTextColor"
         android:textSize="14sp"
