--- a/app/src/main/res/layout/item_stock_check.xml
+++ b/app/src/main/res/layout/item_stock_check.xml
@@ -35,13 +35,13 @@
             android:textAppearance="@style/TextAppearance.ShweMi.Body2"
             android:textStyle="bold" />
 
-        <CheckBox
-            android:id="@+id/cb_date"
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/btn_add"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1.3"
-            android:gravity="start|center"
-            android:paddingStart="32dp" />
+            android:text="@string/add"
+             />
 
 
     </LinearLayout>
